data/derived/sp14/progs/unify/prog1768.ml.out
Characters 311-325:
  | PowerUp(e1,e2)   -> (abs(eval(e1,x,y))) ** (abs(eval(e2,x,y)))
                            ^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
